<resources>
    <string name="app_name">ledapps_demo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="display_image">Display Image</string>
    <string name="continue_text">Continue</string>
    <string name="hair_category">Hair Category</string>
    <string name="beard_category">Beard Category</string>
    <string name="clothe_category">Clothe Category</string>
    <string name="category_image">Category Image</string>
    <string name="none">none</string>
    <string name="beard_image">beard Image</string>
</resources>