<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.MainFragment">

    <FrameLayout
        android:id="@+id/characterFrame"
        android:layout_gravity="bottom"
        android:layout_width="400dp"
        android:layout_height="700dp">

        <ImageView
            android:id="@+id/characterImageView"
            android:src="@drawable/images_character"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/display_image"
            android:layout_width="400dp"
            android:layout_gravity="center"
            android:layout_height="700dp"/>

        <ImageView
            android:id="@+id/hairImageView"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:layout_marginStart="6dp"
            android:contentDescription="@string/beard_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/beardImageView"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="90dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/beard_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/teeImageview"
            android:layout_marginTop="104dp"
            android:layout_marginEnd="4dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:src="@drawable/images_clothes_tee"
            android:contentDescription="@string/display_image"
            android:layout_width="400dp"
            android:layout_height="600dp"/>

        <ImageView
            android:id="@+id/suitImageview"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="4dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:src="@drawable/images_clothes_suit"
            android:contentDescription="@string/display_image"
            android:layout_width="400dp"
            android:layout_height="600dp"/>

        <ImageView
            android:id="@+id/jacketImageview"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="4dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:src="@drawable/images_clothes_jacket"
            android:contentDescription="@string/display_image"
            android:layout_width="400dp"
            android:layout_height="600dp"/>

    </FrameLayout>

    <LinearLayout
        android:weightSum="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"/>

        <View
            android:background="@drawable/black_gradient"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"/>

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/mainCard"
            app:cardCornerRadius="24dp"
            app:layout_constraintBottom_toTopOf="@id/continueButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:background="@android:color/white"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_margin="8dp"
                    android:orientation="horizontal"
                    android:background="@drawable/category_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/hairSelector"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:contentDescription="@string/hair_category"
                        android:src="@drawable/ic_images_category_hair"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:id="@+id/beardSelector"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:contentDescription="@string/beard_category"
                        android:src="@drawable/ic_images_category_beard"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:id="@+id/clotheSelector"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:contentDescription="@string/clothe_category"
                        android:src="@drawable/ic_images_category_clothes"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:id="@+id/categoryRecyclerView"
                    android:paddingEnd="60dp"
                    android:paddingStart="0dp"
                    android:clipToPadding="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/continueButton"
            android:text="@string/continue_text"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:padding="8dp"
            android:background="@drawable/images_button_rounded"
            android:fontFamily="@font/manrope_extrabold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>